# fdf

./: CMakeLists.txt  Makefile  fdf  oldmake
inc/: fdf.h
libft/: Makefile  ft_clear_table.c  libft.h
src/: draw.c  draw_full.c  edit_coordinates.c  loop.c  main.c  menu.c  read_map.c
src/test/: calculations.c  extrapolation.c  matrix_operations.c
test_maps/: 42test.fdf
